@@ -12,7 +12,8 @@ Bugs fixed
 - :mod:`pandas2ri.ri2py_dataframe` is now propagating the row names
   in the R data frame into an index in the pandas data frame (issue #285)
 
-- method `union` defined in the R package `dplyr` was missing from the
+- methods `union`, `intersect`, `setdiff`, `ungroup` defined in the R package
+  `dplyr` were missing from the
   `DataFrame` definition in :mod:`rpy2.robjects.lib.dplyr`
 
 
